--- a/src/pages/new-sale/new-sale.html
+++ b/src/pages/new-sale/new-sale.html
@@ -17,17 +17,17 @@
 
   <form>
     <ion-item>
-      <ion-label color="primary" stacked>Number of Units sold (Required)</ion-label>
+      <ion-label color="primary" stacked>Number of {{unitsSoldBy}} sold (Required)</ion-label>
       <ion-input type="number" name="quantityOfUnitsSold" [(ngModel)]="quantityOfUnitsSold" (ionChange)="updateNumberOfUnitsSold()"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label color="primary" stacked> Cost per unit (Required)</ion-label>
+      <ion-label color="primary" stacked> Cost per {{unitsSoldBy}} (Required)</ion-label>
       <ion-input type="number" name="costPerUnitSold" [(ngModel)]="costPerUnitSold" (ionChange)="updateTotalMadeFromSale()"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label color="primary" stacked>Date Sold</ion-label>
+      <ion-label color="primary" stacked>Date Sold:</ion-label>
         <ion-datetime displayFormat="DDDD, DD MMMM, YYYY" name="dateSold" [(ngModel)]="dateSold"></ion-datetime>
     </ion-item>
 
