--- a/src/pages/sale-listing/sale-listing.html
+++ b/src/pages/sale-listing/sale-listing.html
@@ -31,7 +31,7 @@
       </ion-thumbnail>
       <h3>{{sale.crop}}</h3>
       <p>Quantity sold: {{sale.quantityOfUnitsSold}}</p>
-      <p>Units sold by: {{sale.unitsSoldBy}}</p>
+      <p>Unit Type: {{sale.unitsSoldBy}}</p>
       <p>Cost sold for: ${{sale.costPerunit | number: '.2-2'}}</p>
       <p>{{sale.dateSold | date : 'fullDate'}}</p>
     </ion-item>
