--- a/src/pages/new-cycle/new-cycle.html
+++ b/src/pages/new-cycle/new-cycle.html
@@ -34,14 +34,14 @@
 
     <!--Template for the user to select the name of the cycle as well as to confirm the date it was planted as well as the number of units of land that will be planted-->
   <ng-template #selectLandQuantityTemplate>
-    <h4>Select the Quantity of land that you are using</h4>
+    <h4>Select the number of {{this.newCycle.get('landUnit').value}} that you are using</h4>
     <form [formGroup]="newCycle">
       <ion-item>
         <ion-label color="primary" stacked>Cycle Name (Required)</ion-label>
         <ion-input type="text" placeholder="Enter Name of cycle" name="cycleName" formControlName="name"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label color="primary" stacked>Land Quantity (Required)</ion-label>
+        <ion-label color="primary" stacked>Number of {{this.newCycle.get('landUnit').value}} (Required)</ion-label>
         <ion-input type="number" placeholder="Land Quantity" name="landQuantity" formControlName="landQuantity"></ion-input>
       </ion-item>
       <ion-item>
