updated daily notification

--- a/src/pages/manage-data/manage-data.html
+++ b/src/pages/manage-data/manage-data.html
@@ -16,4 +16,6 @@
 <ion-content padding>
 
   <button class="center" (click)="upload()" block ion-button outline color="myGreen" padding> <p> Upload</p><ion-icon ios="md-cloud-upload" md="md-cloud-upload"></ion-icon> </button>
+  <p>Backups all agriExpense data stored on this device to the AgriExpense database.</p>
+
 </ion-content>
